# chao5whistler

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  RTK.md
docs/: jj-workflow.md
docs/ambient/: assets.md  config.md  soak-runbook.md
docs/assay/: 260320-musikalisches-research-plan.md  260329-ghsingo-architecture.md
docs/plans/: 260320-musikalisches-guiding-plan.md  260320-songh-issue-2-architecture-plan.md  260321-songh-template.toml  260321-songh-toml-spec.md  260321-stage5-build-and-manual-test-guide.md  260321-stage6-render-video-guide.md  260321-stage6-video-stub-guide.md  260322-stage7-stream-bridge-guide.md  260324-stage8-real-soak-ops-guide.md  260325-issue4-staged-implementation-plan.md  260326-issue9-multilayer-soundscape-plan.md  260326-musikalisches-python-tools-audit.md
docs/reports/: 260322_2_songh-stage3-decision-sync.md  260322_3_songh-replay-runtime-foundation.md  260324_4_musikalisches-stage7-rtmps-toolchain-ready.md  260325_2_songh-live-test-gap-audit.md  260329_17_ghsingo-bitrate-and-yesterday.md  260329_17_ghsingo-local-overlay-config-fix.md
docs/study/: 260322-gpt-youtube_bandwidth_estimation.md  260326-opus-free_audio_resources_guide.md  260329-opus-golang_mozart_livestream_architecture.md  260425-opus-中国古代编钟(Bianzhong)可用采样音色与合成方案调研报告.md  260426-opus-让 GitHub 心跳唱歌 ghsingo 音频深度作战手册.md  260501-opus-ghsingo-audio-architecture.md
docs/study/music_source_basis_package/rust/: Cargo.toml
docs/study/music_source_basis_package/rust/examples/: mozart_rules.rs  musicxml_to_mei_via_verovio.rs  normalize_musicxml_ids.rs
docs/study/music_source_basis_package/rust/src/: lib.rs
ghwhistler/: .gitignore  README.md  pyproject.toml  requirements.txt
ghwhistler/_assets/: .gitignore
ghwhistler/act4gh/: _audio.py  _conf.py  _events.py  _video.py  ff4mix2au.sh  gen1ghw.sh  tasks.py
ghwhistler/crontab/: _conf.py  del1d4json.sh  ghe1m2json.sh  grasp4ghevents2csv.py  tasks.py
ghwhistler/ffconcater/: ff2loop4rmtp.sh  ff4rmtp.sh  tasks.py  tpl_ffconcat.txt
ghwhistler/movcolor/: _gen4all.sh  tasks.py
ops/assets/soundfonts/: README.md
ops/systemd/: README.md  install_user_units.py  musikalisches.toml  run_musikalisches_user_service.py  run_songh_user_service.py  songh.toml
ops/wrangler-cli/: package-lock.json  package.json
src/: README.md
src/K.516f/: README.md
src/ghsingo/: .gitignore  Makefile  README.md  USAGE.md  ghsingo-mallet.toml  ghsingo-organ.toml  ghsingo-v2.toml  ghsingo.toml  go.mod  go.sum  movpixer.toml
src/musikalisches/: Makefile  README.md  USAGE.md  usage.md
src/songh/: Cargo.toml  Makefile  README.md  USAGE.md  songh.local.toml.example
src/songh/src/: app.rs  cli.rs  main.rs  replay.rs  stage7.rs
src/songh/src/archive/: download.rs  index.rs  manifest.rs  materialize.rs  mod.rs  normalize.rs
src/songh/src/audio/: mod.rs
src/songh/src/av/: mod.rs
src/songh/src/config/: mod.rs  schema.rs  validate.rs
src/songh/src/model/: mod.rs  normalized_event.rs  runtime_event.rs
src/songh/src/replay/: engine.rs  mod.rs
src/songh/src/text/: mod.rs
src/songh/src/video/: mod.rs
(+160 files in other folders)
