[package]
name = "musikalisches"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "musikalisches"
path = "src/musikalisches/runtime/src/main.rs"

[lib]
path = "src/musikalisches/runtime/src/lib.rs"

[dependencies]
anyhow = "1.0"
hound = "3.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
