[package]
name = "musikalisches"
version = "0.1.0"
edition = "2021"
default-run = "musikalisches"

[[bin]]
name = "musikalisches"
path = "src/musikalisches/runtime/src/main.rs"

[[bin]]
name = "musikalisches-stage7-runtime"
path = "src/musikalisches/runtime/src/stage7_runtime_main.rs"

[lib]
path = "src/musikalisches/runtime/src/lib.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
hound = "3.5"
rustysynth = "1.3.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
