[tool.poetry]
name = "ghwhistler"
version = "0.1.0"
description = ""
authors = ["ZoomQuiet <zoomquiet+git@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
tqdm = "4.66.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
