[package]
name = "songh"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "songh"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
flate2 = "1.1"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
toml = "0.8"
zstd = "0.13"

[dev-dependencies]
tempfile = "3.14"
