[package]
name = "songh"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "songh"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
font8x8 = "0.3"
flate2 = "1.1"
hex = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
rusttype = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
toml = "0.8"
zstd = "0.13"

[dev-dependencies]
tempfile = "3.14"
